UI fix on smaller devices 2

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ h1 {
 
 h2 {
   font-family: 'Noto Serif JP', 'Cormorant Infant', serif;
-  font-size: clamp(35px, 40px, 6vmin);
+  font-size: clamp(30px, 40px, 6vmin);
   font-weight: 400;
   line-height: 1.5em;
 }
